[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"

# [project]
# name = "qtile-mutable_scratch"
# authors = [{name = "James Wright", email = "james@jameswright.xyz"}]
# description = "Add mutable scratch functionality to qtile"
# readme = "README.md"
# license = {file = "LICENSE"}
# keywords = ["qtile"]
# requires-python = ">=3.6"
# classifiers = [
#     "Programming Language :: Python :: 3",
#     "License :: OSI Approved :: MIT License",
#     "Operating System :: OS Independent",
# ]
# dependencies = [
#     "qtile>=0.17"
# ]
#
# # dynamic = ["version"]
#
# [project.urls]
# documentation = "https://github.com/jrwrigh/qtile-mutable_scratch"
# repository = "https://github.com/jrwrigh/qtile-mutable_scratch"
# "Bug Tracker" = "https://github.com/jrwrigh/qtile-mutable_scratch/issues"
#
# # [tools.setuptools.dynamic]
# # version = {attr = "qtile_mutable_scratch._version.__version__"}
#
# [tool.setuptools.packages.find]
# include = [
#     "qtile_mutable_scratch",
#     "qtile_mutable_scratch.*",
# ]
