[metadata]
name = qtile-mutable_scratch
version = 0.0.1
author = James Wright
author_email = james@jameswright.xyz
description = Add mutable scratch functionality to qtile
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jrwrigh/qtile-mutable_scratch
project_urls =
    Bug Tracker = https://github.com/jrwrigh/qtile-mutable_scratch/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.6

[options.packages.find]
where = .
